--- a/challenge.html
+++ b/challenge.html
@@ -106,7 +106,7 @@
 </ul>
 </div>
 <pre id="ty"><a href="">HOME</a>  <a href="">ABOUT</a>  <a href="">FEATURES</a>  <a href="">TESTIMONIALS</a></pre>
-<p id="gud"><img  src="logo.png"></p>
+<p id="gud"><img  src="images/logo.png"></p>
 <p id="last">&copy;2019 mentme, Inc. All rights reserved</p>
 </footer>
 </body>
